fix: chat page container appears too highly positioned

--- a/src/pages/ChatPage.css
+++ b/src/pages/ChatPage.css
@@ -1,6 +1,7 @@
 .chat-page-container {
   display: flex;
-  height: calc(100vh - var(--navbar-height));
+  /* BUG Distance to screen top appears too small */
+  height: calc(100dvh - var(--navbar-height));
 }
 
 .rooms-container {
